--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,11 @@
 
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
-
+        <dependency>
+            <groupId>com.github.tommyettinger</groupId>
+            <artifactId>colorful</artifactId>
+            <version>0.8.2</version>
+        </dependency>
 
     </dependencies>
 
